refactor : 맵의 value를 가져와 리스트로 만듦